RigidBody update error with animated Layer Exclusions #36327

Closed
opened 2013-07-30 18:07:06 +02:00 by Nicolas Longchamps · 3 comments

%%%--- Short description of error ---
Everything works as should when scrubbing, playback in OGL, or rendering still images. But when rendering out an animation, rigid body simulation fails to update properly on frame where object is unhidden via an animated exclude layer.
I guess excluding the layer means the simulation is not updated during that time, and when included, there is one frame of wrong transforms. Everything is back to normal the next frame afterwards. This does not occur when manually advancing frame by frame and rendering still images (f12).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached blend file. Note the animated exclusion masks in the render layer panel. There is a "normal" torus and a fractured torus. At start, normal is included and fractured is excluded. This is swapped at moment of impact. fractured version is included on frame 20, but will not be consistent with RB simulation on that frame if rendered out as animation.
1-Open File
2-Render out animation (small rez, frames set to 18-22 for short wait).
3-View output and note frame 20. Compare with frame 20 in OGL.

Blender:


version 2.68 (sub 1), revision b'58732'. b'Release'
build date: b'2013-07-29', b'19:17:45'
platform: b'Windows:64bit'

Python:


version: 3.3.0 (default, Nov 26 2012, 15:38:36) [MSC v.1500 64 bit (AMD64)]

OpenGL


renderer: 'ATI Radeon HD 5800 Series'
vendor: 'ATI Technologies Inc.'
version: '4.2.12002 Compatibility Profile Context 9.12.0.0'

%%%

%%%--- Short description of error --- Everything works as should when scrubbing, playback in OGL, or rendering still images. But when rendering out an animation, rigid body simulation fails to update properly on frame where object is unhidden via an animated exclude layer. I guess excluding the layer means the simulation is not updated during that time, and when included, there is one frame of wrong transforms. Everything is back to normal the next frame afterwards. This does not occur when manually advancing frame by frame and rendering still images (f12). - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached blend file. Note the animated exclusion masks in the render layer panel. There is a "normal" torus and a fractured torus. At start, normal is included and fractured is excluded. This is swapped at moment of impact. fractured version is included on frame 20, but will not be consistent with RB simulation on that frame if rendered out as animation. 1-Open File 2-Render out animation (small rez, frames set to 18-22 for short wait). 3-View output and note frame 20. Compare with frame 20 in OGL. Blender: **** version 2.68 (sub 1), revision b'58732'. b'Release' build date: b'2013-07-29', b'19:17:45' platform: b'Windows:64bit' Python: **** version: 3.3.0 (default, Nov 26 2012, 15:38:36) [MSC v.1500 64 bit (AMD64)] OpenGL **** renderer: 'ATI Radeon HD 5800 Series' vendor: 'ATI Technologies Inc.' version: '4.2.12002 Compatibility Profile Context 9.12.0.0' %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn revision 60023, thanks for the report.%%%

%%%Fix in svn revision 60023, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36327
No description provided.