Fix #36327: cycles render layers exclude layers animation did not work well. This is kind of another way to animate layers which is disabled, but add an exception to make this case work.